--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
-  "name": "dev_container_demo",
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
+  "name": "dev_container_demo1",
+  "image": "mcr.microsoft.com/devcontainers/base:ubuntu", 
   "features": {
   }
 }
